[package]
name = "rust-elements-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_elements_wrapper"
crate-type = ["staticlib", "cdylib"]

[dependencies]
elements = { version = "0.22", features = ["serde"] }
anyhow = "1.0"
rand = "0.8"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.7.1", features = ["json"] }
base64 = "0.21.4"
serde_json = { version = "1.0.108", features = [] }
hex = "0.4.3"
bytes = "1.5.0"
digest = { version = "0.11.0-pre.5", features = [] }
log = "0.4.20"
